# Athunas

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  config.ini  config.yaml  emulator_config.json  installation.sh  makefile  pyproject.toml  requirements.txt
.github/: ACKNOWLEDGMENTS.md  CONTRIBUTING.md  RELEASE_TEMPLATE.md  SECURITY.md
.github/CHANGELOG/: v0.0.0.md
.github/workflow/: CD.yml
.github/workflows/: CD.yml  dev-build.yml  main-build.yml
KiCad/Rpi_matrix_adapter/: Rpi_matrix_adapter.kicad_pcb  Rpi_matrix_adapter.kicad_prl  Rpi_matrix_adapter.kicad_pro  Rpi_matrix_adapter.kicad_sch
configs/: example.config.yaml  recovery.config.yaml
docker/: Dockerfile  compose.dev.yml  compose.yml
docs/: configuration.md  installation.md  wiring.md
resources/web/static/: style.css
resources/web/templates/: home.html  index.html  section.html
scripts/: installer.sh  pigpiod.service
src/: __main__.py  app_manager.py  board.py  config.py  controller.py  controller_v3.py  custom_frames.py  debug.py  logs.py  path.py  settings.py  utils.py  webserver.py  yaml_utils.py
src/apps/: gif_viewer.py  life.py  main_screen.py  notion.py  pomodoro.py  spotify_player.py  stocks.py  subcount.py  weather.py
src/apps_v2/: gif_viewer.py  life.py  main_screen.py  notion_v2.py  pomodoro.py  spotify_player.py  subcount.py  weather.py
src/core/: app_manager.py  board.py  config.py  custom_frames.py  logs.py  webserver.py
src/enums/: config_type.py  encoder_input.py  encoder_input_status.py  input_status.py  service_status.py  tilt_input.py  variable_importance.py
src/models/: application.py  module.py
src/modules/: notification_module.py  spotify_module.py  weather_module.py
