[project]
name = "Carousel"
version = "0.0.0"
description = "RGB led matrix dashboard, providing apps for various purposes."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Yann M. Vidamment", email = "contact@libresoftware.cloud" },
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gpiozero>=2.0.1",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "pyyaml>=6.0.2",
    "Pillow>=9.0.0",
    "pyowm>=3.3.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "RGBMatrixEmulator>=0.11.6",
    "pigpio>=1.78",
    "spotipy>=2.25.1",
    "scipy>=1.16.1",
    "websocket>=0.2.1",
    "yfinance>=0.2.65"
]

[project.urls]
# TODO: update as soon as a website is created
Homepage = "https://github.com/MorganKryze/Carousel"
# TODO: update as soon as the documentation is published
Documentation = "https://github.com/MorganKryze/Carousel/docs"
Repository = "https://github.com/MorganKryze/Carousel.git"
Issues = "https://github.com/MorganKryze/Carousel/issues"
Changelog = "https://github.com/MorganKryze/Carousel/tree/main/.github/CHANGELOG"
